# pool-translate-free

./: .gitignore  README.md  ptreload.py  pyproject.toml  requirements.txt
pool_tr/: __init__.py  check_free_services.py  freemt_services.py  iciba_tr.py  omni_tr.py  para_sent_tr_list.py  pool_tr.py  probe_services.py  q_services.py  queue_tr.py  report_time.py  with_func_attrs.py
tests/: test_pool_tr.py  test_probe_services.py  test_queue_tr.py
