[tool.poetry]
name = "pool-tr"
version = "0.1.0"
description = "machine translate via a pool"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ffreemt/pool-transalte-free"

include = [
    "LICENSE",
]
keywords = ["mt", "machine", "translation", "translate"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
google-tr-free = "^0.0.6"
wrapt-timeout-decorator = "^1.3.1"
logzero = "^1.5.0"
bing-tr-free = "^0.0.4"
xiaoniu-tr-free = "^0.0.3"
ratelimit = "^2.2.1"
coloredlogs = "^14.0"
promt-tr-free = "^0.0.2"
qq-tr-free = "^0.0.2"
youdao-tr-free = "^0.0.7"
python-levenshtein = {path = "whl/python_Levenshtein-0.12.0-cp36-cp36m-win_amd64.whl"}
cchardet = "^2.1.6"
sogou-tr-free = "^0.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
